make github unit tests run in parallel + fix build for jdk 21 (#346)